deployment-1-simple-replica.yaml
apiVersion : apps/v1
kind: Deployment
metadata: 
  name: my-web-deployment-replicas
  labels:
    app : my-k8s-application
    env : prod
spec:
  replicas: 3
  selector:
    matchLabels:
      project: cia
  template:
    metadata:
      labels:
        project: cia
    spec:
      containers:
        - name: cia-web
          image: daisykey08/k8sphpdanil:ver1
          ports:
            - containerPort: 80
