deployment-1-simple.yaml
apiVersion : apps/v1
kind: Deployment
metadata: 
  name: my-web-deployment
  labels:
    app : my-k8s-application
spec:
  selector:
    matchLabels:
      project: kgb
  template:
    metadata:
      labels:
        project: kgb
    spec:
      containers:
        - name: kgb-web
          image: daisykey08/k8sphpdanil:latest
          ports:
            - containerPort: 80
