pod-myapp.yaml
apiVersion : v1
kind: Pod
metadata:
  name: my-app
  labels:
    env : prod
    app : main
    tier : frontend
    owner : Danil_Kravtsov
spec: 
  containers:
    - name: container-web
      image: nginx:latest
      ports:
        - containerPort: 80

    - name: container-api
      image: tomcat:8.5.38
      ports:
        - containerPort: 8080
