pod-myweb-v1.yaml
apiVersion : v1
kind: Pod
metadata:
  name: my-web
spec: 
  containers:
    - name: container-apache
      image: nginx:latest
