service-1-multiLB.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-multi-pod
  labels:
    app: my-k8s-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      project: cia
  template:
    metadata:
      labels:
        project: cia
    spec:
      containers:
        - name : my-web
          image: daisykey08/k8sphpdanil:latest
          ports:
            - containerPort: 80
        - name : not-my-web
          image: tomcat:8.5.38
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: my-multi-pod-service
  labels:
    env : prod
    owner: Danil
spec:
  selector:
    project: cia
  ports:
    - name: my-web-app-listener
      protocol: TCP
      port: 80
      targetPort: 80
    - name: not-my-app-listener
      protocol: TCP
      port: 8888
      targetPort: 8080
  type: LoadBalancer
