ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-hosts

spec: 
  rules: 
    - host: #доменное имя хоста
      http:
        paths:
          - backend:
            serviceName: main
            servicePort: 80
    - host: #доменное имя хоста
      http:
        paths:
          - backend:
            serviceName: web1
            servicePort: 80
    - host: #доменное имя хоста
      http:
        paths:
          - backend:
            serviceName: web2
            servicePort: 80
    - host: #доменное имя хоста
      http:
        paths:
          - backend:
            serviceName: web3
            servicePort: 80
    - host: #доменное имя хоста
      http:
        paths:
          - backend:
            serviceName: web-tommy
            servicePort: 8080
